--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions":["android.permission.MANAGE_EXTERNAL_STORAGE"],
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
