--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-native-web": "~0.19.10",
     "expo-file-system": "~17.0.1",
     "expo-video-thumbnails": "~8.0.0",
-    "expo-av": "~14.0.7"
+    "expo-av": "~14.0.7",
+    "expo-dev-client": "~4.0.26",
+    "expo-intent-launcher": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
